// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.guard-cwd.acceptance given: [case1] guard with $route in judge command when: [t0] artifact created but no approval then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.19bdec249480a7a036.r001._.given.by_peer.bash.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.19bdec249480a7a036.r001._.taken.by_self.bash.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ $route/1.vision*.md
      ├─ reviews
      │   └─ r1: bash (l1, 1/∞)
      │       ├─ approved [TIME]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.review.i001.19bdec249480a7a036.r001._.given.by_peer.bash.md
      │       └─ taken: .reviews/peer/1.vision._.review.i001.19bdec249480a7a036.r001._.taken.by_self.bash.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.guard-cwd.acceptance given: [case1] guard with $route in judge command when: [t1] approval granted and pass reattempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.19bdec249480a7a036.r001._.given.by_peer.bash.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.19bdec249480a7a036.r001._.taken.by_self.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.vision*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 1/∞)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.vision._.review.i001.19bdec249480a7a036.r001._.given.by_peer.bash.md
   │  │       └─ taken: .reviews/peer/1.vision._.review.i001.19bdec249480a7a036.r001._.taken.by_self.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.guard-cwd.acceptance given: [case2] guard with $route works from nested route directory when: [t0] judge runs on nested route then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .behavior/test-feature/.reviews/peer/1.vision._.review.i001.9b72e27ac4d438845c.r001._.given.by_peer.bash.md
   │   └─ taken: .behavior/test-feature/.reviews/peer/1.vision._.review.i001.9b72e27ac4d438845c.r001._.taken.by_self.bash.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ $route/1.vision*.md
      ├─ reviews
      │   └─ r1: bash (l1, 1/∞)
      │       ├─ approved [TIME]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .behavior/test-feature/.reviews/peer/1.vision._.review.i001.9b72e27ac4d438845c.r001._.given.by_peer.bash.md
      │       └─ taken: .behavior/test-feature/.reviews/peer/1.vision._.review.i001.9b72e27ac4d438845c.r001._.taken.by_self.bash.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.guard-cwd.acceptance given: [case2] guard with $route works from nested route directory when: [t1] approval granted on nested route then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .behavior/test-feature/.reviews/peer/1.vision._.review.i001.9b72e27ac4d438845c.r001._.given.by_peer.bash.md
   │   └─ taken: .behavior/test-feature/.reviews/peer/1.vision._.review.i001.9b72e27ac4d438845c.r001._.taken.by_self.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.vision*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 1/∞)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .behavior/test-feature/.reviews/peer/1.vision._.review.i001.9b72e27ac4d438845c.r001._.given.by_peer.bash.md
   │  │       └─ taken: .behavior/test-feature/.reviews/peer/1.vision._.review.i001.9b72e27ac4d438845c.r001._.taken.by_self.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
